# Airbnb-Clone

airbnb-clone-backend/: build.sh  db2.sqlite3  pyproject.toml
airbnb-clone-backend/bookings/: models.py  serializers.py
airbnb-clone-backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
airbnb-clone-backend/categories/: models.py  serializers.py  views.py
airbnb-clone-backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
airbnb-clone-backend/common/: models.py
airbnb-clone-backend/config/: authentication.py  settings.py  urls.py
airbnb-clone-backend/direct_messages/: models.py
airbnb-clone-backend/direct_messages/migrations/: 0001_initial.py
airbnb-clone-backend/experiences/: admin.py  models.py  serializers.py  views.py
airbnb-clone-backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_experience_description_and_more.py
airbnb-clone-backend/houses/: admin.py  models.py
airbnb-clone-backend/houses/migrations/: 0001_initial.py  0002_initial.py
airbnb-clone-backend/medias/: models.py  views.py
airbnb-clone-backend/medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
airbnb-clone-backend/reviews/: admin.py  models.py
airbnb-clone-backend/rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
airbnb-clone-backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
airbnb-clone-backend/wishlists/: models.py  serializers.py  urls.py  views.py
airbnb-clone-frontend/: package.json  (+1 more)
(+33 files in other folders)
